--- a/task.html
+++ b/task.html
@@ -355,7 +355,7 @@
             const shareData = {
                 title: 'Earn Free Keys',
                 text: 'Join me to earn free keys! Check out this awesome app!',
-                url: 'https://vipul2252.github.io/key/home.html'
+                url: 'https://vipul2252.github.io/key2025/home.html'
             };
 
             if (navigator.share) {
