--- a/task.html
+++ b/task.html
@@ -366,7 +366,7 @@
 
     <div class="frens-invite">
         <div class="frens-invite-button">
-            <input type="text" value="https://t.me/DOGSclon_bot" id="link" readonly>
+            <input type="text" value="https://https://t.me/key20251_bot/key" id="link" readonly>
             <button id="copyButton">Copy Link</button>
         </div>
     </div>
@@ -416,17 +416,7 @@
             }
         }
 
-        function completeShareTask() {
-            const amount = 200;
-            updateBalanceAndTransaction(amount, 'Share App Task Completed');
-            markTaskCompleted('share');
-            alert(`Congratulations! You earned ${amount} keys!`);
-            
-            // Update button state
-            const button = document.querySelector('[onclick="shareApp()"]');
-            button.classList.add('completed');
-            button.textContent = 'Completed';
-            button.disabled = true;
+        
         }
 
         function openYouTube() {
